[package]
name = "kasi-kule"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
description = "An implementation of CIECAM02 color spaces in Rust"
repository = "https://github.com/alisww/kasi-kule"
keywords = ["color", "colorimetry", "color_difference", "color_spaces"]
categories = ["computer-vision", "science"]

[features]
approximate_math = ["micromath"]

[dependencies.micromath]
version = "2.0.0"
optional = true

[dev-dependencies]
criterion = "0.3"
lab = "0.11"
fastrand = "1.6.0"
approx = "0.5.0"

[[bench]]
name = "color_conversion"
harness = false

[[bench]]
name = "util_functions"
harness = false
